src/sass/components/_lists.scss
@use "sass:color";
@use "sass:map";
@use "../variables";
@use "../functions/parse-length";
@use "../mixins/issues";
@use "../mixins/variants";
@use "../vendor/bootstrap/mixins/clearfix";
@use "../vendor/tabler-icons";

// Lists

table {
  border-spacing: 0;
  border-collapse: collapse;
}

table.list {
  width: 100%;
  margin-bottom: variables.$line-height-computed;
  font-size: variables.$font-size-list;

  .autoscroll & {
    margin-bottom: 0;
  }

  &.changesets {
    margin-bottom: variables.$line-height-computed;
  }

  th,
  .table-list-header {
    padding: variables.$table-cell-padding;
    border: 2px solid variables.$table-border-color;
    border-width: variables.$table-list-header-border;
    background-color: variables.$table-list-header-bg;
    color: variables.$gray-750;
    vertical-align: bottom;

    @if variables.$table-list-header-bg == variables.$body-bg {
      @at-root .box & {
        background-color: variables.$panel-bg;
      }
    }

    a {
      color: variables.$gray-900;
    }

    .icon-svg {
      display: none;
    }

    .icon-label {
      margin-left: 0;
    }
  }

  tr.ui-sortable-helper {
    background-color: variables.$highlight-bg;
  }

  td {
    padding: variables.$table-cell-padding;
    border: 1px solid variables.$table-border-color;
    border-width: variables.$table-list-item-border;
    text-align: center;
    vertical-align: top;

    &.icon {
      padding-left: variables.$table-cell-padding + variables.$icon-width;
    }

    &.id,
    &.issue_id,
    &.legacy_id {
      width: 2%;
      font-weight: variables.$font-weight-bold;
    }

    &.reorder {
      white-space: nowrap;
    }

    &.attachments a {
      display: block;
    }

    &.short_description {
      text-align: left;
    }
  }

  th,
  td {
    &.checkbox {
      width: 15px;
      padding-right: variables.$table-cell-padding;
      padding-left: variables.$table-cell-padding;

      @if parse-length.parse-length(variables.$table-list-item-border, right) == 0 {
        &:first-child {
          padding-right: 0;
        }
      }

      input {
        margin: 2px 0 0;
      }
    }

    &.activity,
    &.assigned_to,
    &.attachments,
    &.author,
    &.category,
    &.comments,
    &.description,
    &.fixed_version,
    &.last_notes,
    &.last_updated_by,
    &.name,
    &.parent-subject,
    &.priority,
    &.relations,
    &.roles,
    &.status,
    &.string,
    &.subject,
    &.text,
    &.tracker,
    &.user {
      text-align: left;
    }

    &.id,
    &.legacy_id,
    &.estimated_hours,
    &.float,
    &.int,
    &.remaining_hours,
    &.spent_hours,
    &.story_points {
      text-align: right;
    }
  }

  td,
  div {
    &.buttons {
      text-align: right;
      white-space: nowrap;

      a {
        margin-right: variables.$padding-small-vertical;

        &.icon-only {
          margin-right: 0;
        }
      }

      img {
        vertical-align: middle;
      }
    }
  }

  caption {
    padding: .5em .5em .5em 0;
    text-align: left;
  }
}

.table-list-cell {
  display: table-cell;
  padding: variables.$table-cell-padding;
  vertical-align: top;
}

tr.project {
  .name a {
    white-space: nowrap;
  }

  &.closed,
  &.archived,
  &.closed a,
  &.archived a {
    color: variables.$gray-600;
  }

  &.idnt td.name {
    @include variants.ti-icon-style;

    &::before {
      @include variants.ti-icon-variant(tabler-icons.$ti-icon-chevron-right);

      color: variables.$gray-600;
    }
  }

  @for $i from 1 through 9 {
    &.idnt-#{$i} td.name {
      padding-left: 16px * $i;
    }
  }
}

tr.issue {
  text-align: center;
  white-space: nowrap;

  .category,
  .enumeration,
  .list,
  .parent-subject,
  .parent,
  .relations,
  .string,
  .subject,
  .text {
    white-space: normal;
  }

  .relations {
    text-align: left;
    white-space: normal;

    span {
      white-space: nowrap;
    }
  }

  .controller-issues.action-index & {
    &.assigned-to-me {
      .assigned_to,
      .subject {
        a {
          font-weight: variables.$font-weight-bold;
        }
      }
    }
  }

  &.idnt td.subject {
    @include variants.ti-icon-style;

    &::before {
      @include variants.ti-icon-variant(tabler-icons.$ti-icon-chevron-right);

      color: variables.$gray-600;
    }
  }

  &.overdue td.due_date {
    color: variables.$brand-danger;
  }

  @for $i from 1 through 9 {
    &.idnt-#{$i} td.subject {
      padding-left: 16px * $i;
    }
  }
}

.issues {
  .block_column,
  .description,
  .last_notes {
    padding: 0;
    text-align: left;
    white-space: normal;

    > span {
      display: block;
      margin-bottom: variables.$line-height-computed * .25;
      padding: variables.$table-cell-padding;
      font-weight: variables.$font-weight-bold;
    }

    pre {
      white-space: normal;
    }

    @media screen and (min-width: variables.$screen-sm-min) {
      > .wiki {
        max-height: 20em;
        padding: variables.$padding-wiki;
        overflow: auto;
      }
    }
  }
}

td.center {
  text-align: center;
}

td.assigned_to,
td.last_updated_by {
  white-space: normal;
}

.issue-report {
  table-layout: fixed;
}

.issue-report-graph {
  width: 75%;
  margin: variables.$line-height-computed auto;
}

.sample-data {
  margin: variables.$line-height-computed * .5;
  margin-bottom: variables.$line-height-computed;
  border: 1px solid variables.$table-border-color;

  td {
    border: 1px solid variables.$table-border-color;
  }

  tr:first-child td {
    font-weight: variables.$font-weight-bold;
    text-align: center;
  }
}

tr.builtin td.name {
  font-style: italic;
}
/* ... */

